--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,11 @@ body {
     width: 300px;
     float: left;
     height: 800px;
-    background-color: blue;
+    background-color: black;
     border: 2px dashed white;
     padding-left: 2em;
     padding-right: 2em;
+    padding-top: 2em;
     margin: 40px;
 }
 #second {
@@ -31,7 +32,7 @@ body {
     float: right;
     height: 800px;
     background-color: green;
-    color: white;
+    color: white; 
     border: 2px dashed white;
     padding-top: 2em;
     padding-left: 2em;
@@ -47,4 +48,8 @@ a {
 }
 * {
     color: white;
+}
+#button {
+    color: black;
+    float: right;
 }
